--- a/responsive.css
+++ b/responsive.css
@@ -570,7 +570,7 @@
 
  
 
-  .contact .contact-content .column{
+  .contactC .contact-content .column{
       width: 100%;
       margin-bottom: 35px;
   }
@@ -585,11 +585,11 @@
 @media (max-width: 500px) {
  
 
-  .contact .right form .fields{
+  .contactC .right form .fields{
       flex-direction: column;
   }
-  .contact .right form .name,
-  .contact .right form .email{
+  .contactC .right form .name,
+  .contactC .right form .email{
       margin: 0;
   }
   .right form .error-box{
