--- a/responsive.css
+++ b/responsive.css
@@ -599,3 +599,22 @@
     margin-top: 178px;
   }
 }
+
+
+@media (max-width: 948px) {
+
+  #footer{
+
+    margin-top: 160px;
+  }
+
+}
+
+/* @media (max-width: 500px) {
+
+  #footer{
+
+    margin-top: 160px;
+  }
+
+} */
